refactored css to not have overlapping text; adjusted text to make sense for new functionality on front end; merges all previous feature branches; no longer displaying count of contributors on front end but still captures contributor log on back end in database;

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -212,6 +212,7 @@ main {
 .edit-link {
   display: block;
   margin: -1.5% 0 2% 0;
+  text-align: right;
 }
 
 .upvote-btn {
